2nd changes moved

--- a/Demotour/test-output/old/Default suite/classes.html
+++ b/Demotour/test-output/old/Default suite/classes.html
@@ -4,14 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.demotour.qa.testcases.HomepageTest</td>
+<td>com.demotour.qa.testcases.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>checkValues</td>
+<td>loginpagetitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>nologintest</td>
+<td>unsuccessful login </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginpagetest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginpagelogoTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
