--- a/Demotour/test-output/old/Default suite/methods-alphabetical.html
+++ b/Demotour/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpagelogoTest()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">loginpagelogoTest</td> 
+  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:56</td>   <td>14707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpagetest()[pri:1, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">loginpagetest</td> 
+  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:45</td>   <td>4284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpagetitleTest()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">loginpagetitleTest</td> 
+  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:51</td>   <td>10308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.nologintest()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">nologintest</td> 
+  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:51</td>   <td>10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:51</td>   <td>10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:51</td>   <td>10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:51</td>   <td>10367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:59</td>   <td>18088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:59</td>   <td>18088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:59</td>   <td>18088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>22/02/09 13:11:59</td>   <td>18088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.demotour.qa.testcases.LoginPageTest@4c371370]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@294658058</td>   <td></td> </tr>
 </table>
